tests/negative/wrong_method.sans
// expect-error: undefined
main() I {
  a = [1 2 3]
  a.nonexistent()
  0
}
